# Cloud-Build-Test-for-ML

./: cloudbuild.yaml  pipeline_upload.py  pyproject.toml  test_pr-pipeline.json
tests/: test_cloudbuild.py
